index нужен для переадресации на index1 и mobile. Верстка перенесена на bs4. Довавлена пункт меню - презентация

--- a/mobil.html
+++ b/mobil.html
@@ -169,7 +169,7 @@
 						</h3>
 						<div class="about-section-text-wrap">
 							<p class="about-section-text">
-								В разработке мы придерживаемся международного стандарта Cobit 5 в части этапов внедрения информационных систем. Все этапы согласованны с заказчиком и подробно документируются.
+								В разработке мы придерживаемся методологии Agile в части разработки, внедрения и сопровождения информационных систем. Все этапы согласованны с заказчиком и подробно документируются.
 							</p>
 						</div>
 					</div>
@@ -179,7 +179,7 @@
 						</h3>
 						<div class="about-section-text-wrap">
 							<p class="about-section-text">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, vel corporis dignissimos! Velit, dolorum ab ducimus tempore debitis consequatur beatae tempora suscipit, impedit nobis facilis! Voluptate voluptas ea odio repudiandae.
+								Наша основная цель - работающий продукт. Взаимопонимание с заказчиком важнее формальностей. Готовность к изменениям и совершенствование важнее первоначального плана.
 							</p>
 						</div>
 					</div>
@@ -189,7 +189,7 @@
 						</h3>
 						<div class="about-section-text-wrap">
 							<p class="about-section-text">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic amet, repudiandae quisquam nesciunt tempore, in! Delectus nihil recusandae dolor porro qui voluptate, temporibus beatae saepe, optio non perferendis distinctio! Non.
+								В разработке мы используем эволюционную модель, при которой этапы разработки, изменения и дополнения рассматриваются в контексте целостной системы.
 							</p>
 						</div>
 					</div>
@@ -219,8 +219,8 @@
 		<div id="tab6" class="section-contacts hide"> 
 			<div class="section-contacts-wrap">
 				<div class="contacts hide">
-					<a class="contacts-phone" href="tel:+038(063)6456469">+380(063) 645 64 69<img src="img/Phone-Calling.png" alt="phone" class="img-phone"></a>
-					<a class="contacts-phone" href="tel:+038(066)2861674">+380(066) 286 16 74<img src="img/Phone-Calling.png" alt="phone" class="img-phone"></a>
+					<a class="contacts-phone" href="tel:+380636456469">+38(063)645-6469<img src="img/Phone-Calling.png" alt="phone" class="img-phone"></a>
+					<a class="contacts-phone" href="tel:+380672962132">+38(067)296-2132<img src="img/Phone-Calling.png" alt="phone" class="img-phone"></a>
 					<a class="contacts-email" href="info@universum-studio.agency">info@universum-studio.agency<img src="img/mail.png" alt="email" class="email"></a>
 				</div>
 			</div>	
@@ -231,8 +231,8 @@
 
 	
 	
-	<script src="js/jquery-3.3.1.min.js"></script>
-	<script src="js/jquery-migrate-3.1.0.min.js"></script>
+	<script src="js/jquery-3.4.1.min.js"></script>
+	<!--<script src="js/jquery-migrate-3.1.0.min.js"></script>-->
 	<script src="js/mobil.js"></script>
 </body>
 </html>
