Финал кроме форм

--- a/index1.html
+++ b/index1.html
@@ -59,7 +59,14 @@
 			<div class="header-wrapper">
 				<img src="img/logo.png" alt="Logo" class="logo">
 				<div class="phone">
-					<a href="#" class="phone__link">+38(066)123-45-67</a> <!-- tel:+380661234567 -->
+					<div class="phone1">
+						<a href="tel:+380636456469" class="phone__link">+38(063)645-6469</a>
+					</div>
+					<div class="phone2 mt-3">
+						<a href="tel:+380672962132" class="phone__link">+38(067)296-2132</a>
+					</div>
+
+
 				</div>
 			</div>
 			<div class="wrapper"></div>
@@ -88,8 +95,7 @@
 							<a href="#tab5" class="nav-tab-list__link nav-contacts">Контакты</a>
 						</li>
 						<div class="presentation">
-							<a href="presentation.pdf" download>Презентация <img src="img/pdf1.png"
-																											alt=""></a>
+							<a href="presentation.pdf" download>Презентация <img src="img/pdf1.png" alt=""></a>
 						</div>
 					</ul>
 
@@ -111,7 +117,7 @@
 									</h3>
 									<span class="cover-text"></span>
 									<p class="about-studio__text about-studio__text-1">
-										Наша комания появилась а рынке недавною Но с самого начала деятельности, мы стремимся к тому, что бы давать своим заказчикам максимально полный комплекс услуг. Начиная свой путь с простой разроботкикрасивых сайтов, постепенно мы стали предлагать и другие сопутствующие сервисы.
+										Наша компания появилась на рынке недавно. Но с самого начала деятельности мы стремимся к тому, чтобы давать своим заказчикам максимально полный комплекс услуг. Начиная свой путь с простой разработки красивых сайтов, постепенно мы стали предлагать и другие сопутствующие сервисы.
 									</p>
 								</div>
 								<div class="about-studio__page-item about-studio__page-item-2">
@@ -157,27 +163,27 @@
 								<ul class="servises-list">
 									<li class="servises-list__item servise-item_1">
 										<div class="servises-list__text">Одностраничные лендинги (сайт-визитка)</div>
-										<div class="servises-list__price"></div>
+										<div class="servises-list__price servises-list__price1"></div>
 									</li>
 									<li class="servises-list__item servise-item_2">
-										<div class="servises-list__text">Корпоративные сайты</div>
-										<div class="servises-list__price"></div>
+										<div class="servises-list__text">Интернет-магазины</div>
+										<div class="servises-list__price servises-list__price2"></div>
 									</li>
 									<li class="servises-list__item servise-item_3">
 										<div class="servises-list__text">Имиджевые сайты</div>
-										<div class="servises-list__price"></div>
+										<div class="servises-list__price servises-list__price3"></div>
 									</li>
 									<li class="servises-list__item servise-item_4">
-										<div class="servises-list__text">Интернет-магазины</div>
-										<div class="servises-list__price"></div>
+										<div class="servises-list__text">Корпоративные сайты</div>
+										<div class="servises-list__price servises-list__price4"></div>
 									</li>
 									<li class="servises-list__item servise-item_5">
 										<div class="servises-list__text">Мобильные приложения</div>
-										<div class="servises-list__price"></div>
+										<div class="servises-list__price servises-list__price5"></div>
 									</li>
-									<li class="servises-list__item servise-item_5">
+									<li class="servises-list__item servise-item_6">
 										<div class="servises-list__text">Сопровождение и поддержка</div>
-										<div class="servises-list__price"></div>
+										<div class="servises-list__price servises-list__price"></div>
 									</li>
 								</ul>
 							</div>
