--- a/mobil.html
+++ b/mobil.html
@@ -8,15 +8,17 @@
 	<meta content='width' name='MobileOptimized'/>
 	<meta content='yes' name='apple-mobile-web-app-capable'/> -->
 	<title>Главная mobil</title>
-	<meta name='description' content="" />
-	<meta name="keywords" content="" />
+	<meta content="разработка сайта, разработка интернет-магазина, корпоративный, сайт, магазин, Wordpress, под ключ, Opencart, имиджевый, landing page, Киев, Украина,
+                  разработка сайтов в Киеве, украинская веб-студия, создание интернет-магазинов в Киеве, мобильные приложения" name="keywords">
+	<meta content="Наша студия разрабатывает сайты с уникальным дизайном любой сложности, интернет-магазины, имиджевые и анимационные промо-сайты" name="description">
+	<meta name="robots" content="index,follow" />
 	<!-- <link rel="icon" type="image/x-icon" href="favicon.ico" /> -->
 	<script type="text/javascript">
 		
-    function DetectTheThing() {
+   /* function DetectTheThing() {
     	if( screen.width > 700 && screen.height > 540 ) {
     		location.href = '../Universum canvas new/index.html';
-  		}
+  		}*/
 		// } else {
 		// 	location.href = 'index.html';
 		// }
@@ -25,7 +27,7 @@
        // || uagent.search("android") > -1 || uagent.search("blackberry") > -1
        // || uagent.search("webos") > -1)
        //    window.location.href ="mobil.html";
-    }
+  /*  }*/
 </script>
 	<link rel="stylesheet" type="text/css" href="css/fonts.css" />
 	<link rel="stylesheet" type="text/css" href="css/mobil.css" />	
@@ -54,16 +56,19 @@
 						<p class="service-text service1">Одностраничные лендинги (сайт-визитка)</p>
 					</div>
 					<div class="service-wrap">	
-						<p class="service-text service2">Корпоративные сайты</p>
+						<p class="service-text service2">Интернет-магазины</p>
 					</div>
 					<div class="service-wrap">	
 						<p class="service-text service3">Имидживые сайты</p>
 					</div>
 					<div class="service-wrap">	
-						<p class="service-text service4">Интернет-магазины</p>
+						<p class="service-text service4">Корпоративные сайты</p>
 					</div>
 					<div class="service-wrap">	
 						<p class="service-text service5">Мобильные приложения</p>
+					</div>
+					<div class="service-wrap">
+						<p class="service-text service6">Сопровождение и поддержка</p>
 					</div>
 				</div>
 			</section>
@@ -149,7 +154,7 @@
 						</li>
 					</ul>
 				</div>
-				<a href="#" class="load-presentation">Скачать презентацию</a>
+				<a href="presentation.pdf" class="load-presentation" download>Скачать презентацию</a>
 			</section>
 			<section id="tab4" class="section tab hide">
 				<div class="about-wrap">
@@ -159,7 +164,7 @@
 						</h3>
 						<div class="about-section-text-wrap">
 							<p class="about-section-text">
-								Наша комания появилась а рынке недавною Но с самого начала деятельности, мы стремимся к тому, что бы давать своим заказчикам максимально полный комплекс услуг. Начиная свой путь с простой разроботкикрасивых сайтов, постепенно мы стали предлагать и другие сопутствующие сервисы.
+								Наша компания появилась на рынке недавно. Но с самого начала деятельности мы стремимся к тому, чтобы давать своим заказчикам максимально полный комплекс услуг. Начиная свой путь с простой разработки красивых сайтов, постепенно мы стали предлагать и другие сопутствующие сервисы.
 							</p>
 						</div>
 					</div>
@@ -221,7 +226,7 @@
 				<div class="contacts hide">
 					<a class="contacts-phone" href="tel:+380636456469">+38(063)645-6469<img src="img/Phone-Calling.png" alt="phone" class="img-phone"></a>
 					<a class="contacts-phone" href="tel:+380672962132">+38(067)296-2132<img src="img/Phone-Calling.png" alt="phone" class="img-phone"></a>
-					<a class="contacts-email" href="info@universum-studio.agency">info@universum-studio.agency<img src="img/mail.png" alt="email" class="email"></a>
+					<a class="contacts-email" href="mailto:info@universum-studio.agency">info@universum-studio.agency<img src="img/mail.png" alt="email" class="email"></a>
 				</div>
 			</div>	
 			<div class="contacts-background"></div>
@@ -229,8 +234,6 @@
 		
 	</div>			
 
-	
-	
 	<script src="js/jquery-3.4.1.min.js"></script>
 	<!--<script src="js/jquery-migrate-3.1.0.min.js"></script>-->
 	<script src="js/mobil.js"></script>
