--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<!---->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145277220-2"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
@@ -60,7 +60,7 @@
 				<img src="img/logo.png" alt="Logo" class="logo">
 				<div class="phone">
 					<div class="phone1">
-						<a href="tel:+380636456469" class="phone__link">+38(063)645-6469</a>
+						<a href="tel:+380668433227" class="phone__link">+38(066)843-3227</a>
 					</div>
 					<div class="phone2 mt-3">
 						<a href="tel:+380672962132" class="phone__link">+38(067)296-2132</a>
@@ -77,7 +77,7 @@
 
 		<main class="tab-wrap js-tab-wrap content-wrapper container-fluid h-100">
 			<div class="row h-100">
-				<div class="nav-tab-list-wrapper left-side__wrapper col-3">
+				<div class="nav-tab-list-wrapper mt-5 left-side__wrapper col-3">
 					<ul class="nav-tab-list tabs d-flex flex-column justify-content-center js-tabs">
 						<li class="nav-tab-list__item active">
 							<a href="#tab6" class="nav-tab-list__link">О студии</a>
@@ -95,7 +95,7 @@
 							<a href="#tab5" class="nav-tab-list__link nav-contacts">Контакты</a>
 						</li>
 						<div class="presentation">
-							<a href="presentation.pdf" download>Презентация <img src="img/pdf1.png" alt=""></a>
+							<a href="presentation.pdf" download>Презентация<br><br><img src="img/pdf1.png" alt=""></a>
 						</div>
 					</ul>
 
@@ -256,17 +256,21 @@
 									<form action="" method="post" id="form" class="form">
 										<div class="form-wrapper">
 											<div class="input-wrapper">
-												<input type="text" name="name" placeholder="Имя">
+												<input id="contact-form-name" type="text" name="name" placeholder="Имя">
 											</div>
 											<div class="input-wrapper">
-												<input type="text" name="phone" placeholder="Телефон">
+												<input id="contact-form-phone" type="text" name="phone" placeholder="Телефон">
 											</div>
 											<div class="input-wrapper">
-												<input type="text" name="email" placeholder="E-mail">
+												<input id="contact-form-email" type="text" name="email" placeholder="E-mail">
 											</div>
-											<div class="submit-btn">
-												<input type="submit" value="Отправить">
+											<div class="submit-wrap d-flex justify-content-end">
+												<div class="message" id="message-contacts"></div>
+												<div class="submit-btn">
+													<input type="submit" value="Отправить">
+												</div>
 											</div>
+
 										</div>
 									</form>
 									<div class="cover-input"></div>
@@ -275,7 +279,7 @@
 									<div class="info-wrapper">
 										<ul class="info-list">
 											<li class="info-list__item">
-												<a href="tel:+380636456469" class="info-list__link">+38(063)645-6469</a>
+												<a href="tel:+380668433227" class="info-list__link">+38(066)843-3227</a>
 											</li>
 											<li class="info-list__item">
 												<a href="tel:+380672962132" class="info-list__link">+38(067)296-2132</a>
@@ -304,19 +308,16 @@
 		
 		<footer class="active">
 			<p class="empty"></p>
-			<form action="" class="form-footer hide">
-				<!-- <button class="form-btn"><img src="img/Arrow.png" alt="стрелка" class="btm-img"></button> -->
+			<form action="" class="form-footer hide" id="form-footer">
 				<span class="form-text"><img src="img/Arrow.png" alt="стрелка" class="btm-img"></span>
 				<div class="form-wrap-input">
-					<!-- <span class="message">Только цыфры</span> -->
-					<input type="telephone" id="btn" name="phone" class="form-input" placeholder="Телефон" required="required">
-					<button class="form-btn">Перезвонить мне</button>
-					<!-- <label for="btn" class="form-text">Перезвонить мне</label> -->
+					<input type="telephone" id="phone" name="phone" class="form-input" placeholder="Телефон" required="required">
+					<div id="message-fast"></div><button class="form-btn" id="fast-btn">Перезвонить мне</button>
 				</div>
 				<div class="form-wrap-radio">
-					<input type="radio" id="site" class="radio-btn radio-site checked" checked>
+					<input type="radio" name="site" id="site" class="radio-btn radio-site checked" checked>
 					<label for="site" class="label-radio">Нужен сайт</label>
-					<input type="radio" id="consultation" class="radio-btn radio-consultation">
+					<input type="radio" name="consultation" id="consultation" class="radio-btn radio-consultation">
 					<label for="consultation" class="label-radio">Консультация</label>
 				</div>
 				<div class="form-alert hide">
@@ -339,7 +340,6 @@
 	
 	<script src="js/jquery-3.4.1.min.js"></script>
 	<script src="js/bootstrap.min.js" ></script>
-	<script src="js/validator.js" ></script>
 	<script src="js/custom.js" ></script>
 	<!--<script type="text/javascript" src="http://www.google-analytics.com/urchin.js"></script>
 	<script type="text/javascript"> var _uacct='UA-241365-1'; urchinTracker(); </script>-->
