--- a/mobil.html
+++ b/mobil.html
@@ -1,6 +1,15 @@
 ﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145277220-2"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-145277220-2');
+	</script>
 	<meta charset="UTF-8">
 	<!-- <meta name="format-detection" content="telephone=no"> -->
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
@@ -14,20 +23,6 @@
 	<meta name="robots" content="index,follow" />
 	<!-- <link rel="icon" type="image/x-icon" href="favicon.ico" /> -->
 	<script type="text/javascript">
-		
-   /* function DetectTheThing() {
-    	if( screen.width > 700 && screen.height > 540 ) {
-    		location.href = '../Universum canvas new/index.html';
-  		}*/
-		// } else {
-		// 	location.href = 'index.html';
-		// }
-       // var uagent = navigator.userAgent.toLowerCase();
-       // if (uagent.search("iphone") > -1 || uagent.search("ipad") > -1 
-       // || uagent.search("android") > -1 || uagent.search("blackberry") > -1
-       // || uagent.search("webos") > -1)
-       //    window.location.href ="mobil.html";
-  /*  }*/
 </script>
 	<link rel="stylesheet" type="text/css" href="css/fonts.css" />
 	<link rel="stylesheet" type="text/css" href="css/mobil.css" />	
@@ -215,7 +210,7 @@
 			<div class="form-wrap">
 				<form action="" class="form hide">
 					<div class="form-close"><img src="img/cross.png" alt="close" class="cross"></div>
-					<input type="number" class="form-input" placeholder="Номер телефона" required="required">
+					<input type="number" name="phone" id="phone" class="form-input" placeholder="Номер телефона" required="required">
 					<button name="" class="form-btn">Заказать корпоративный сайт</button>
 				</form>
 			</div>	
@@ -224,7 +219,7 @@
 		<div id="tab6" class="section-contacts hide"> 
 			<div class="section-contacts-wrap">
 				<div class="contacts hide">
-					<a class="contacts-phone" href="tel:+380636456469">+38(063)645-6469<img src="img/Phone-Calling.png" alt="phone" class="img-phone"></a>
+					<a class="contacts-phone" href="tel:+380668433227">+38(066)843-3227<img src="img/Phone-Calling.png" alt="phone" class="img-phone"></a>
 					<a class="contacts-phone" href="tel:+380672962132">+38(067)296-2132<img src="img/Phone-Calling.png" alt="phone" class="img-phone"></a>
 					<a class="contacts-email" href="mailto:info@universum-studio.agency">info@universum-studio.agency<img src="img/mail.png" alt="email" class="email"></a>
 				</div>
