Изменены ссылки в портфолио

--- a/mobil.html
+++ b/mobil.html
@@ -96,7 +96,7 @@
 							<p class="portfolio__about-window-text">
 								Сайт студии дизайна интерьера "Vision Design"
 							</p>
-							<a href="https://woodstock.org.ua" class="portfolio__about-window-link">
+							<a href="http://interior-design.com.ua" class="portfolio__about-window-link">
 								 http://interior-design.com.ua
 							</a>
 						</li>
@@ -107,7 +107,7 @@
 							<p class="portfolio__about-window-text">
 								Имиджевый сайт строительной компании
 							</p>
-							<a href="https://woodstock.org.ua" class="portfolio__about-window-link">
+							<a href="http://cpm-group.com.ua" class="portfolio__about-window-link">
 								 http://cpm-group.com.ua
 							</a>
 						</li>
@@ -118,7 +118,7 @@
 							<p class="portfolio__about-window-text">
 								Корпоративный сайт со структурой лендинга для IT-Компании
 							</p>
-							<a href="https://woodstock.org.ua" class="portfolio__about-window-link">
+							<a href="http://brosit.co.uk" class="portfolio__about-window-link">
 								 http://brosit.co.uk
 							</a>
 						</li>
