--- a/index1.html
+++ b/index1.html
@@ -2,14 +2,14 @@
 <html lang="ru">
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145277220-2"></script>
+	<!--<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145277220-2"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
 
 		gtag('config', 'UA-145277220-2');
-	</script>
+	</script>-->
 	<meta charset="utf-8">
 	<title>Universum Studio - вэб-студия нового поколения</title>
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -215,32 +215,32 @@
 						<div class="tab-cont-wrapper portfolio-wrap w-100 h-100 d-flex align-items-center portfolio-slide-1">
 							<div class="portfolio-slide d-flex flex-column justify-content-around portfolio-slide-1 active">
 								<ul class="portfolio-list portfolio-list-1 d-flex align-content-between">
-									<li class="portfolio-item"><a href="#" class="portfolio-link"><img src="img/site1-320.png" alt="сайт" class="portfolio-img"></a></li>
-									<li class="portfolio-item"><a href="#" class="portfolio-link"><img src="img/site2-320.png" alt="сайт" class="portfolio-img"></a></li>
+									<li class="portfolio-item"><a href="https://woodstock.org.ua" class="portfolio-link" target=_blank><img src="img/site1-320.png" alt="сайт" class="portfolio-img"></a></li>
+									<li class="portfolio-item"><a href="http://interior-design.com.ua" class="portfolio-link" target=_blank><img src="img/site2-320.png" alt="сайт" class="portfolio-img"></a></li>
 								</ul>
 								<ul class="portfolio-list portfolio-list-2">
-									<li class="portfolio-item"><a href="#" class="portfolio-link"><img src="img/site3-320.jpg" alt="сайт" class="portfolio-img"></a></li>
-									<li class="portfolio-item"><a href="#" class="portfolio-link"><img src="img/site4-320.jpg" alt="сайт" class="portfolio-img"></a></li>
+									<li class="portfolio-item"><a href="http://cpm-group.com.ua" class="portfolio-link" target=_blank><img src="img/site3-320.jpg" alt="сайт" class="portfolio-img"></a></li>
+									<li class="portfolio-item"><a href="http://brosit.co.uk" class="portfolio-link" target=_blank><img src="img/site4-320.jpg" alt="сайт" class="portfolio-img"></a></li>
 								</ul>
 							</div>
 							<div class="portfolio-slide d-flex flex-column justify-content-around portfolio-slide-2 hide">
 								<ul class="portfolio-list portfolio-list-1">
-									<li class="portfolio-item"><a href="#" class="portfolio-link"><img src="img/site4-320.jpg" alt="сайт" class="portfolio-img"></a></li>
-									<li class="portfolio-item"><a href="#" class="portfolio-link"><img src="img/site3-320.jpg" alt="сайт" class="portfolio-img"></a></li>
+									<li class="portfolio-item"><a href="http://brosit.co.uk" class="portfolio-link" target=_blank><img src="img/site4-320.jpg" alt="сайт" class="portfolio-img"></a></li>
+									<li class="portfolio-item"><a href="http://cpm-group.com.ua" class="portfolio-link" target=_blank><img src="img/site3-320.jpg" alt="сайт" class="portfolio-img"></a></li>
 								</ul>
 								<ul class="portfolio-list portfolio-list-2">
-									<li class="portfolio-item"><a href="#" class="portfolio-link"><img src="img/site2-320.png" alt="сайт" class="portfolio-img"></a></li>
-									<li class="portfolio-item"><a href="#" class="portfolio-link"><img src="img/site1-320.png" alt="сайт" class="portfolio-img"></a></li>
+									<li class="portfolio-item"><a href="http://interior-design.com.ua" class="portfolio-link" target=_blank><img src="img/site2-320.png" alt="сайт" class="portfolio-img"></a></li>
+									<li class="portfolio-item"><a href="https://woodstock.org.ua" class="portfolio-link" target=_blank><img src="img/site1-320.png" alt="сайт" class="portfolio-img"></a></li>
 								</ul>
 							</div>
 							<div class="portfolio-slide d-flex flex-column justify-content-around portfolio-slide-3 hide">
 								<ul class="portfolio-list portfolio-list-1">
-									<li class="portfolio-item"><a href="#" class="portfolio-link"><img src="img/site2-320.png" alt="сайт" class="portfolio-img"></a></li>
-									<li class="portfolio-item"><a href="#" class="portfolio-link"><img src="img/site4-320.jpg" alt="сайт" class="portfolio-img"></a></li>
+									<li class="portfolio-item"><a href="http://interior-design.com.ua" class="portfolio-link" target=_blank><img src="img/site2-320.png" alt="сайт" class="portfolio-img"></a></li>
+									<li class="portfolio-item"><a href="http://brosit.co.uk" class="portfolio-link" target=_blank><img src="img/site4-320.jpg" alt="сайт" class="portfolio-img"></a></li>
 								</ul>
 								<ul class="portfolio-list portfolio-list-2">
-									<li class="portfolio-item"><a href="#" class="portfolio-link"><img src="img/site1-320.png" alt="сайт" class="portfolio-img"></a></li>
-									<li class="portfolio-item"><a href="#" class="portfolio-link"><img src="img/site3-320.jpg" alt="сайт" class="portfolio-img"></a></li>
+									<li class="portfolio-item"><a href="https://woodstock.org.ua" class="portfolio-link" target=_blank><img src="img/site1-320.png" alt="сайт" class="portfolio-img"></a></li>
+									<li class="portfolio-item"><a href="http://cpm-group.com.ua" class="portfolio-link" target=_blank><img src="img/site3-320.jpg" alt="сайт" class="portfolio-img"></a></li>
 								</ul>
 							</div>
 								<span class="portfolio-arrow portfolio-next"></span>
