Добавлен скрипт FB в форму контакты

--- a/index1.html
+++ b/index1.html
@@ -58,12 +58,17 @@
 		<header>	
 			<div class="header-wrapper">
 				<img src="img/logo.png" alt="Logo" class="logo">
-				<div class="phone">
-					<div class="phone1">
-						<a href="tel:+380662861674" class="phone__link">+38(066)286-1674</a>
+				<div class="right-header d-flex">
+					<div class="present">
+						<a href="https://about.universum-studio.agency/intro.html">Watch Movie Intro</a>
 					</div>
-					<div class="phone2 mt-3">
-						<a href="tel:+380672962132" class="phone__link">+38(067)296-2132</a>
+					<div class="phone">
+						<div class="phone1">
+							<a href="tel:+380662861674" class="phone__link">+38(066)286-1674</a>
+						</div>
+						<div class="phone2 mt-3">
+							<a href="tel:+380672962132" class="phone__link">+38(067)296-2132</a>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -335,7 +340,24 @@
 	<div class="icon-load"></div>		
 
 <!-- BODY EOF   -->
-	
+	<!-- Facebook Pixel Code -->
+	<script>
+		!function(f,b,e,v,n,t,s)
+		{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+				n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+			if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+			n.queue=[];t=b.createElement(e);t.async=!0;
+			t.src=v;s=b.getElementsByTagName(e)[0];
+			s.parentNode.insertBefore(t,s)}(window, document,'script',
+				'https://connect.facebook.net/en_US/fbevents.js');
+		fbq('init', '1153563835033324');
+		fbq('track', 'PageView');
+	</script>
+	<noscript><img height="1" width="1" style="display:none"
+				   src="https://www.facebook.com/tr?id=1153563835033324&ev=PageView&noscript=1"
+	/></noscript>
+	<!-- End Facebook Pixel Code -->
+
 	<script src="js/jquery-3.4.1.min.js"></script>
 	<script src="js/bootstrap.min.js" ></script>
 	<script src="js/custom.js" ></script>
