--- a/mobil.html
+++ b/mobil.html
@@ -33,6 +33,7 @@
 			<nav class="menu__top">
 				<div class="top"></div>
 				<a href="#tab6" class="phone"><img src="img/phone.png" alt="phone" class="phone-icon"></a>
+				<a href="https://about.universum-studio.agency/intro.html" class="present-mob"><img src="img/movie-icon.png" alt="movie" class="movie-icon"></a>
 				<ul class="menu-list">
 					<li class="menu-item"><a href="#tab1" class="menu-link">Услуги</a></li>
 					<li class="menu-item"><a href="#tab2" class="menu-link">Портфолио</a></li>
